lib/LibNotcurses.jl


function notcurses_cursor_yx(nc, y, x)
    @ccall libnotcurses.notcurses_cursor_yx(nc::Ptr{notcurses}, y::Ptr{Cint}, x::Ptr{Cint})::Cint
end

function ncplane_greyscale(n)
    @ccall libnotcurses.ncplane_greyscale(n::Ptr{ncplane})::Cvoid
end

struct ncselector_item
    option::Ptr{Cchar}
    desc::Ptr{Cchar}
end

struct ncselector_options
    title::Ptr{Cchar}
    secondary::Ptr{Cchar}
    footer::Ptr{Cchar}
    items::Ptr{ncselector_item}
    defidx::Cuint
    maxdisplay::Cuint
    opchannels::UInt64
    descchannels::UInt64
    titlechannels::UInt64
    footchannels::UInt64
    boxchannels::UInt64
    flags::UInt64
end

function ncselector_create(n, opts)
    @ccall libnotcurses.ncselector_create(n::Ptr{ncplane}, opts::Ptr{ncselector_options})::Ptr{ncselector}
end

function ncselector_additem(n, item)
    @ccall libnotcurses.ncselector_additem(n::Ptr{ncselector}, item::Ptr{ncselector_item})::Cint
end

function ncselector_delitem(n, item)
    @ccall libnotcurses.ncselector_delitem(n::Ptr{ncselector}, item::Ptr{Cchar})::Cint
end

function ncselector_selected(n)
    @ccall libnotcurses.ncselector_selected(n::Ptr{ncselector})::Ptr{Cchar}
end

function ncselector_plane(n)
    @ccall libnotcurses.ncselector_plane(n::Ptr{ncselector})::Ptr{ncplane}
end

function ncselector_previtem(n)
    @ccall libnotcurses.ncselector_previtem(n::Ptr{ncselector})::Ptr{Cchar}
end

function ncselector_nextitem(n)
    @ccall libnotcurses.ncselector_nextitem(n::Ptr{ncselector})::Ptr{Cchar}
end

function ncselector_offer_input(n, nc)
    @ccall libnotcurses.ncselector_offer_input(n::Ptr{ncselector}, nc::Ptr{ncinput})::Bool
end

function ncselector_destroy(n, item)
    @ccall libnotcurses.ncselector_destroy(n::Ptr{ncselector}, item::Ptr{Ptr{Cchar}})::Cvoid
end

struct ncmselector_item
    option::Ptr{Cchar}
    desc::Ptr{Cchar}
    selected::Bool
end

struct ncmultiselector_options
    title::Ptr{Cchar}
    secondary::Ptr{Cchar}
    footer::Ptr{Cchar}
    items::Ptr{ncmselector_item}
    maxdisplay::Cuint
    opchannels::UInt64
    descchannels::UInt64
    titlechannels::UInt64
    footchannels::UInt64
    boxchannels::UInt64
    flags::UInt64
end

function ncmultiselector_create(n, opts)
    @ccall libnotcurses.ncmultiselector_create(n::Ptr{ncplane}, opts::Ptr{ncmultiselector_options})::Ptr{ncmultiselector}
end

function ncmultiselector_selected(n, selected, count)
    @ccall libnotcurses.ncmultiselector_selected(n::Ptr{ncmultiselector}, selected::Ptr{Bool}, count::Cuint)::Cint
end

function ncmultiselector_plane(n)
    @ccall libnotcurses.ncmultiselector_plane(n::Ptr{ncmultiselector})::Ptr{ncplane}
end

function ncmultiselector_offer_input(n, nc)
    @ccall libnotcurses.ncmultiselector_offer_input(n::Ptr{ncmultiselector}, nc::Ptr{ncinput})::Bool
end

function ncmultiselector_destroy(n)
    @ccall libnotcurses.ncmultiselector_destroy(n::Ptr{ncmultiselector})::Cvoid
end

struct nctree_item
    curry::Ptr{Cvoid}
    subs::Ptr{nctree_item}
    subcount::Cuint
end

struct nctree_options
    items::Ptr{nctree_item}
    count::Cuint
    nctreecb::Ptr{Cvoid}
    indentcols::Cint
    flags::UInt64
end

mutable struct nctree end

function nctree_create(n, opts)
    @ccall libnotcurses.nctree_create(n::Ptr{ncplane}, opts::Ptr{nctree_options})::Ptr{nctree}
end

function nctree_plane(n)
    @ccall libnotcurses.nctree_plane(n::Ptr{nctree})::Ptr{ncplane}
end

function nctree_redraw(n)
    @ccall libnotcurses.nctree_redraw(n::Ptr{nctree})::Cint
end

function nctree_offer_input(n, ni)
    @ccall libnotcurses.nctree_offer_input(n::Ptr{nctree}, ni::Ptr{ncinput})::Bool
end

function nctree_focused(n)
    @ccall libnotcurses.nctree_focused(n::Ptr{nctree})::Ptr{Cvoid}
end

function nctree_next(n)
    @ccall libnotcurses.nctree_next(n::Ptr{nctree})::Ptr{Cvoid}
end

function nctree_prev(n)
    @ccall libnotcurses.nctree_prev(n::Ptr{nctree})::Ptr{Cvoid}
end

function nctree_goto(n, spec, failspec)
    @ccall libnotcurses.nctree_goto(n::Ptr{nctree}, spec::Ptr{Cuint}, failspec::Ptr{Cint})::Ptr{Cvoid}
end

function nctree_add(n, spec, add)
    @ccall libnotcurses.nctree_add(n::Ptr{nctree}, spec::Ptr{Cuint}, add::Ptr{nctree_item})::Cint
end

function nctree_del(n, spec)
    @ccall libnotcurses.nctree_del(n::Ptr{nctree}, spec::Ptr{Cuint})::Cint
end

function nctree_destroy(n)
    @ccall libnotcurses.nctree_destroy(n::Ptr{nctree})::Cvoid
end

struct ncmenu_item
    desc::Ptr{Cchar}
    shortcut::ncinput
end

struct ncmenu_section
    name::Ptr{Cchar}
    itemcount::Cint
    items::Ptr{ncmenu_item}
    shortcut::ncinput
end

struct ncmenu_options
    sections::Ptr{ncmenu_section}
    sectioncount::Cint
    headerchannels::UInt64
    sectionchannels::UInt64
    flags::UInt64
end

mutable struct ncmenu end

function ncmenu_create(n, opts)
    @ccall libnotcurses.ncmenu_create(n::Ptr{ncplane}, opts::Ptr{ncmenu_options})::Ptr{ncmenu}
end

function ncmenu_unroll(n, sectionidx)
    @ccall libnotcurses.ncmenu_unroll(n::Ptr{ncmenu}, sectionidx::Cint)::Cint
end

function ncmenu_rollup(n)
    @ccall libnotcurses.ncmenu_rollup(n::Ptr{ncmenu})::Cint
end

function ncmenu_nextsection(n)
    @ccall libnotcurses.ncmenu_nextsection(n::Ptr{ncmenu})::Cint
end

function ncmenu_prevsection(n)
    @ccall libnotcurses.ncmenu_prevsection(n::Ptr{ncmenu})::Cint
end

function ncmenu_nextitem(n)
    @ccall libnotcurses.ncmenu_nextitem(n::Ptr{ncmenu})::Cint
end

function ncmenu_previtem(n)
    @ccall libnotcurses.ncmenu_previtem(n::Ptr{ncmenu})::Cint
end

function ncmenu_item_set_status(n, section, item, enabled)
    @ccall libnotcurses.ncmenu_item_set_status(n::Ptr{ncmenu}, section::Ptr{Cchar}, item::Ptr{Cchar}, enabled::Bool)::Cint
end

function ncmenu_selected(n, ni)
    @ccall libnotcurses.ncmenu_selected(n::Ptr{ncmenu}, ni::Ptr{ncinput})::Ptr{Cchar}
end

function ncmenu_mouse_selected(n, click, ni)
    @ccall libnotcurses.ncmenu_mouse_selected(n::Ptr{ncmenu}, click::Ptr{ncinput}, ni::Ptr{ncinput})::Ptr{Cchar}
end

function ncmenu_plane(n)
    @ccall libnotcurses.ncmenu_plane(n::Ptr{ncmenu})::Ptr{ncplane}
end

function ncmenu_offer_input(n, nc)
    @ccall libnotcurses.ncmenu_offer_input(n::Ptr{ncmenu}, nc::Ptr{ncinput})::Bool
end

function ncmenu_destroy(n)
    @ccall libnotcurses.ncmenu_destroy(n::Ptr{ncmenu})::Cvoid
end

struct ncprogbar_options
    ulchannel::UInt32
    urchannel::UInt32
    blchannel::UInt32
    brchannel::UInt32
    flags::UInt64
end

function ncprogbar_create(n, opts)
    @ccall libnotcurses.ncprogbar_create(n::Ptr{ncplane}, opts::Ptr{ncprogbar_options})::Ptr{ncprogbar}
end

function ncprogbar_plane(n)
    @ccall libnotcurses.ncprogbar_plane(n::Ptr{ncprogbar})::Ptr{ncplane}
end

function ncprogbar_set_progress(n, p)
    @ccall libnotcurses.ncprogbar_set_progress(n::Ptr{ncprogbar}, p::Cdouble)::Cint
end

function ncprogbar_progress(n)
    @ccall libnotcurses.ncprogbar_progress(n::Ptr{ncprogbar})::Cdouble
end

function ncprogbar_destroy(n)
    @ccall libnotcurses.ncprogbar_destroy(n::Ptr{ncprogbar})::Cvoid
end

struct nctabbed_options
    selchan::UInt64
    hdrchan::UInt64
    sepchan::UInt64
    separator::Ptr{Cchar}
    flags::UInt64
end

# typedef void ( * tabcb ) ( struct nctab * t , struct ncplane * ncp , void * curry )
const tabcb = Ptr{Cvoid}

function nctabbed_create(n, opts)
    @ccall libnotcurses.nctabbed_create(n::Ptr{ncplane}, opts::Ptr{nctabbed_options})::Ptr{nctabbed}
end

function nctabbed_destroy(nt)
    @ccall libnotcurses.nctabbed_destroy(nt::Ptr{nctabbed})::Cvoid
end

function nctabbed_redraw(nt)
    @ccall libnotcurses.nctabbed_redraw(nt::Ptr{nctabbed})::Cvoid
end

function nctabbed_ensure_selected_header_visible(nt)
    @ccall libnotcurses.nctabbed_ensure_selected_header_visible(nt::Ptr{nctabbed})::Cvoid
end

function nctabbed_selected(nt)
    @ccall libnotcurses.nctabbed_selected(nt::Ptr{nctabbed})::Ptr{nctab}
end

function nctabbed_leftmost(nt)
    @ccall libnotcurses.nctabbed_leftmost(nt::Ptr{nctabbed})::Ptr{nctab}
end

function nctabbed_tabcount(nt)
    @ccall libnotcurses.nctabbed_tabcount(nt::Ptr{nctabbed})::Cint
end

function nctabbed_plane(nt)
    @ccall libnotcurses.nctabbed_plane(nt::Ptr{nctabbed})::Ptr{ncplane}
end

function nctabbed_content_plane(nt)
    @ccall libnotcurses.nctabbed_content_plane(nt::Ptr{nctabbed})::Ptr{ncplane}
end

function nctab_cb(t)
    @ccall libnotcurses.nctab_cb(t::Ptr{nctab})::tabcb
end

function nctab_name(t)
    @ccall libnotcurses.nctab_name(t::Ptr{nctab})::Ptr{Cchar}
end

function nctab_name_width(t)
    @ccall libnotcurses.nctab_name_width(t::Ptr{nctab})::Cint
end

function nctab_userptr(t)
    @ccall libnotcurses.nctab_userptr(t::Ptr{nctab})::Ptr{Cvoid}
end

function nctab_next(t)
    @ccall libnotcurses.nctab_next(t::Ptr{nctab})::Ptr{nctab}
end

function nctab_prev(t)
    @ccall libnotcurses.nctab_prev(t::Ptr{nctab})::Ptr{nctab}
end

function nctabbed_add(nt, after, before, tcb, name, opaque)
    @ccall libnotcurses.nctabbed_add(nt::Ptr{nctabbed}, after::Ptr{nctab}, before::Ptr{nctab}, tcb::tabcb, name::Ptr{Cchar}, opaque::Ptr{Cvoid})::Ptr{nctab}
end

function nctabbed_del(nt, t)
    @ccall libnotcurses.nctabbed_del(nt::Ptr{nctabbed}, t::Ptr{nctab})::Cint
end

function nctab_move(nt, t, after, before)
    @ccall libnotcurses.nctab_move(nt::Ptr{nctabbed}, t::Ptr{nctab}, after::Ptr{nctab}, before::Ptr{nctab})::Cint
end

function nctab_move_right(nt, t)
    @ccall libnotcurses.nctab_move_right(nt::Ptr{nctabbed}, t::Ptr{nctab})::Cvoid
end

function nctab_move_left(nt, t)
    @ccall libnotcurses.nctab_move_left(nt::Ptr{nctabbed}, t::Ptr{nctab})::Cvoid
end

function nctabbed_rotate(nt, amt)
    @ccall libnotcurses.nctabbed_rotate(nt::Ptr{nctabbed}, amt::Cint)::Cvoid
end

function nctabbed_next(nt)
    @ccall libnotcurses.nctabbed_next(nt::Ptr{nctabbed})::Ptr{nctab}
end

function nctabbed_prev(nt)
    @ccall libnotcurses.nctabbed_prev(nt::Ptr{nctabbed})::Ptr{nctab}
end

function nctabbed_select(nt, t)
    @ccall libnotcurses.nctabbed_select(nt::Ptr{nctabbed}, t::Ptr{nctab})::Ptr{nctab}
end

function nctabbed_channels(nt, hdrchan, selchan, sepchan)
    @ccall libnotcurses.nctabbed_channels(nt::Ptr{nctabbed}, hdrchan::Ptr{UInt64}, selchan::Ptr{UInt64}, sepchan::Ptr{UInt64})::Cvoid
end

function nctabbed_hdrchan(nt)
    @ccall libnotcurses.nctabbed_hdrchan(nt::Ptr{nctabbed})::UInt64
end

function nctabbed_selchan(nt)
    @ccall libnotcurses.nctabbed_selchan(nt::Ptr{nctabbed})::UInt64
end

function nctabbed_sepchan(nt)
    @ccall libnotcurses.nctabbed_sepchan(nt::Ptr{nctabbed})::UInt64
end

function nctabbed_separator(nt)
    @ccall libnotcurses.nctabbed_separator(nt::Ptr{nctabbed})::Ptr{Cchar}
end

function nctabbed_separator_width(nt)
    @ccall libnotcurses.nctabbed_separator_width(nt::Ptr{nctabbed})::Cint
end

function nctabbed_set_hdrchan(nt, chan)
    @ccall libnotcurses.nctabbed_set_hdrchan(nt::Ptr{nctabbed}, chan::UInt64)::Cvoid
end

function nctabbed_set_selchan(nt, chan)
    @ccall libnotcurses.nctabbed_set_selchan(nt::Ptr{nctabbed}, chan::UInt64)::Cvoid
end

function nctabbed_set_sepchan(nt, chan)
    @ccall libnotcurses.nctabbed_set_sepchan(nt::Ptr{nctabbed}, chan::UInt64)::Cvoid
end

function nctab_set_cb(t, newcb)
    @ccall libnotcurses.nctab_set_cb(t::Ptr{nctab}, newcb::tabcb)::tabcb
end

function nctab_set_name(t, newname)
    @ccall libnotcurses.nctab_set_name(t::Ptr{nctab}, newname::Ptr{Cchar})::Cint
end

function nctab_set_userptr(t, newopaque)
    @ccall libnotcurses.nctab_set_userptr(t::Ptr{nctab}, newopaque::Ptr{Cvoid})::Ptr{Cvoid}
end

function nctabbed_set_separator(nt, separator)
    @ccall libnotcurses.nctabbed_set_separator(nt::Ptr{nctabbed}, separator::Ptr{Cchar})::Cint
end

struct ncplot_options
    maxchannels::UInt64
    minchannels::UInt64
    legendstyle::UInt16
    gridtype::ncblitter_e
    rangex::Cint
    title::Ptr{Cchar}
    flags::UInt64
end

function ncuplot_create(n, opts, miny, maxy)
    @ccall libnotcurses.ncuplot_create(n::Ptr{ncplane}, opts::Ptr{ncplot_options}, miny::UInt64, maxy::UInt64)::Ptr{ncuplot}
end
